--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-port = 3000
-jokesURL = https://official-joke-api.appspot.com/jokes
+port=3000
+jokesURL=https://official-joke-api.appspot.com/jokes/
